Bug 54530 Edit | List. Clicking OK crashes. r=putterman,sr=mscott